logos and logo pages uploaded

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Large Groups</h4>
-                    <p class="text-muted">We can accomodate groups from 8 to 375 guests at once.</p>
+                    <p class="text-muted">We can accomodate groups from 8 to 375 guests at once while keeping each group intimate with a dedicated guide.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -120,7 +120,7 @@
                         <i class="fa fa-calendar-check-o fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Easy Booking</h4>
-                    <p class="text-muted">One booking agent will coordinate everything for you.</p>
+                    <p class="text-muted">One booking agent will coordinate everything for you with grace and efficiency.</p>
                 </div>
             </div>
         </div>
@@ -143,7 +143,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/Alternative-SF-Tours-Avital-Tours-Logo.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Avital Food Tours</h4>
@@ -158,11 +158,12 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/urban-hiker-photo.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/Alternative-SF-Tours-Urban-Hiker-Logo.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Urban Hiker</h4>
                         <p class="text-muted">Stairways, hills, and hiking trails</p>
+                        <a href="http://urbanhikersf.com">website</a>
                     </div>
                 </div>
                 <div class="col-sm-6 portfolio-item">
@@ -172,11 +173,12 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/wild-sf-photo.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/Alternative-SF-Tours-Wild-SF-Logo.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Wild SF</h4>
                         <p class="text-muted">Artist-led walking tours</p>
+                        <a href="http://wildsftours.com">website</a>
                     </div>
                 </div>
                 <div class="col-sm-6 portfolio-item">
@@ -186,11 +188,12 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/real-sf-photo.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/Alternative-SF-Tours-Real-SF-Logo.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>The Real SF Tours</h4>
                         <p class="text-muted">Transit focused treks</p>
+                        <a href="http://therealsftour.com">website</a>
                     </div>
                 </div>
             </div>
@@ -471,17 +474,14 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
-                            <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                            <h2>Avital Food Tours</h2>
+                            <p class="item-intro text-muted">Four-course Progressive Dining Experience</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/avital-big-image.png" alt="">
+                            <p>We create 4-course progressive dining experiences, which build from appetizers to entree and finish with dessert. We think of ourselves as storytellers, showcasing each neighborhood through the people, places, and great food (and drinks).</p>
+                            <p>We take you back in kitchens, spend time chatting with chefs, owners, and culinary experts, and create unique food and alcohol pairings. You’ll see, smell, and taste what shapes each unique neighborhood, from the food to the art, history, and culture.</p>
+                            <p>This is a social dining experience. We feel the best dining experiences are the ones in which we’re seated around tables sharing food and stories with others.</p>
                             <p>
-                                <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
-                            <ul class="list-inline">
-                                <li>Date: July 2014</li>
-                                <li>Client: Round Icons</li>
-                                <li>Category: Graphic Design</li>
-                            </ul>
+                            Learn more about Avital Food Tours <a href="https://avitaltours.com">here</a>.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
@@ -503,11 +503,13 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Heading</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/startup-framework-preview.png" alt="">
-                            <p><a href="http://designmodo.com/startup/?u=787">Startup Framework</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
-                            <p>You can preview Startup Framework <a href="http://designmodo.com/startup/?u=787">here</a>.</p>
+                            <h2>URBAN HIKER</h2>
+                            <p class="item-intro text-muted">Stairways, Hills and Hiking Trails</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/urban-hiker-big-image.png" alt="">
+                            <p><a href="http://urbanhikersf.com">Urban Hiker</a> is a boutique tour company founded by Alexandra Kenin.</p>
+                            <p>There are a lot of great hikes around the Bay Area. You can even look up the latest rideshare startup to figure out a way to get to those places.  But I’m going to let you in on a secret. There are many great hikes within San Francisco itself.</p>
+                            <p>Urban Hikes.These aren’t your leisurely strolls in sandals. Nope, you’ll need to lace up your hiking boots (or at least good walking shoes) and fill your camelback for our expeditions. Urban Hiker SF has mapped out routes you won’t find anywhere else; where you’ll traverse hilltops, ascend endless stairways and explore all the hidden spots that you never even knew existed in this city. Come on an urban hike with us and you’ll see a side of San Francisco that few get to experience.</p>
+                            <p>You can learn more about Urban Hiker <a href="http://urbanhikersf.com">here</a>.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
@@ -530,11 +532,12 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/treehouse-preview.png" alt="">
-                            <p>Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their apps or other projects.</p>
-                            <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>
+                            <h2>WILD SF</h2>
+                            <p class="item-intro text-muted">Artist-led Musical Walking Tours</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/wild-sf-big-image.png" alt="">
+                            <p>We’re <a href="https://wildsftours.com">Wild SF</a>. Our San Francisco walking tours are alternative tours of SF’s most iconic neighborhoods, led by passionate local artist-guides.</p>
+                            <p>We want to deliver the most entertaining history lesson ever, sharing the stories of the inspiring heroes, epic buildings and radical social history that define San Francisco, as seen through the locals’ eyes.</p>
+                            <p>You can learn more about Wild SF <a href="http://wildsftours.com">here</a>.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
@@ -557,11 +560,12 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/golden-preview.png" alt="">
-                            <p>Start Bootstrap's Agency theme is based on Golden, a free PSD website template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Golden is a modern and clean one page web template that was made exclusively for Best PSD Freebies. This template has a great portfolio, timeline, and meet your team sections that can be easily modified to fit your needs.</p>
-                            <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/golden-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
+                            <h2>The Real SF Tours</h2>
+                            <p class="item-intro text-muted">Transit Focused Treks</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/real-sf-big-image.png" alt="">
+                            <p>The inspiration for <a href="https://therealsftour.com">The Real SF Tour</a> came from a combination of elements. First was simply wanting to share his lifelong passion for this amazing city. That combined with people finishing the traditional tours he was guiding saying they had a great time but also asking “what do we do next?”. Of course Chris always had great suggestions but also always had the burning desire to show visitors the city beyond the tourist attractions. Finally while waiting for the bus one day, iphone in hand, he realized that because of the new technology you could actually use the public transit system to create the most authentic tour of San Francisco with the city itself providing the experience. The result is The Real SF Tour.
+                            Chris is a San Francisco Native who has spent his entire life in the San Francisco Bay Area. Chris has 5 years formal experience as a tour guide and 10 years of experience as an award winning photography teacher, and he has been showing people the city of San Francisco his entire life.</p>
+                            <p>You can learn more about The Real SF Tours <a href="http://therealsftour.com">here</a>.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
